--- a/Exercicio7_Python_Trabalhando_com_Listas.ipynb
+++ b/Exercicio7_Python_Trabalhando_com_Listas.ipynb
@@ -44,13 +44,13 @@
             "Exercicio 7 - (Trabalhando com Listas) - Código brazuca\n",
             "Crie uma lista de compras que permita ao usuário adicionar itens e, em seguida, imprima a lista completa.\n",
             "\n",
-            "Adicione um item à lista de compras (ou digite 'sair' para finalizar): dfa]\n",
-            "Adicione um item à lista de compras (ou digite 'sair' para finalizar): dsaf\n",
+            "Adicione um item à lista de compras (ou digite 'sair' para finalizar): limao\n",
+            "Adicione um item à lista de compras (ou digite 'sair' para finalizar): laranja\n",
             "Adicione um item à lista de compras (ou digite 'sair' para finalizar): sair\n",
             "\n",
             "Lista de Compras:\n",
-            "- dfa]\n",
-            "- dsaf\n"
+            "- limao\n",
+            "- laranja\n"
           ]
         }
       ],
